--- a/src/app/src/main/res/layout/activity_trade_platform.xml
+++ b/src/app/src/main/res/layout/activity_trade_platform.xml
@@ -16,50 +16,62 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/headerProductId"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Product ID"
-        android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@+id/TradeTitle"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/headerPrice"
-        app:layout_constraintWidth_default="percent"
-        app:layout_constraintWidth_percent="0.33"/>
-
-    <TextView
-        android:id="@+id/headerPrice"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Price"
-        android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@+id/TradeTitle"
-        app:layout_constraintStart_toEndOf="@+id/headerProductId"
-        app:layout_constraintEnd_toStartOf="@+id/headerCategory"
-        app:layout_constraintWidth_default="percent"
-        app:layout_constraintWidth_percent="0.34"/>
-
-    <TextView
-        android:id="@+id/headerCategory"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:text="Category"
-        android:gravity="center"
-        app:layout_constraintTop_toBottomOf="@+id/TradeTitle"
-        app:layout_constraintStart_toEndOf="@+id/headerPrice"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintWidth_default="percent"
-        app:layout_constraintWidth_percent="0.33"/>
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
+    <!-- Product Input Fields -->
+    <EditText
+        android:id="@+id/productName"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@+id/headerCategory"
-        app:layout_constraintBottom_toTopOf="@+id/HomePage"
-        app:layout_constraintVertical_weight="1"/>
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:hint="Enter Product Name"
+        android:minHeight="48dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/TradeTitle" />
 
+    <EditText
+        android:id="@+id/productPrice"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:hint="Enter Product Price"
+        android:minHeight="48dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/productName" />
+
+    <EditText
+        android:id="@+id/productCategory"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:hint="Enter Product Category"
+        android:minHeight="48dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/productPrice" />
+
+    <EditText
+        android:id="@+id/productDescription"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:hint="Enter Product Description"
+        android:minHeight="48dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/productCategory" />
+
+    <Button
+        android:id="@+id/submitButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Submit"
+        app:layout_constraintTop_toBottomOf="@+id/productDescription"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="16dp"/>
+
+    <!-- Existing navigation buttons -->
     <TextView
         android:id="@+id/HomePage"
         android:layout_width="100dp"
