--- a/src/app/src/main/res/layout/activity_post.xml
+++ b/src/app/src/main/res/layout/activity_post.xml
@@ -8,11 +8,15 @@
 
     <TextView
         android:id="@+id/TradeTitle"
-        android:layout_width="wrap_content"
+
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="184dp"
-        android:layout_marginTop="64dp"
-        android:text="Trade"
+        android:layout_marginTop="8dp"
+        android:gravity="center"
+        android:text="Post My item"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -63,23 +67,25 @@
 
     <Button
         android:id="@+id/submitButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="316dp"
+        android:layout_width="96dp"
+        android:layout_height="48dp"
+        android:layout_marginStart="156dp"
+        android:layout_marginTop="50dp"
         android:text="Submit"
-        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/productDescription" />
+        app:layout_constraintTop_toBottomOf="@+id/image_button" />
 
-    <Button
+
+    <ImageButton
         android:id="@+id/button_back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
-        android:layout_marginTop="4dp"
-        android:text="Back"
+        android:layout_width="45dp"
+        android:layout_height="46dp"
+        android:background="#FEF7FF"
+        android:contentDescription="@string/btn_private_menu_return_des"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@android:drawable/ic_menu_revert"
+        app:tint="#3F51B5" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -94,9 +100,11 @@
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="149dp"
-        android:layout_marginTop="15dp"
-        android:text="Select your image"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="16dp"
+        android:text="Select item image"
+        android:textSize="16sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
@@ -104,8 +112,8 @@
         android:id="@+id/image_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="157dp"
-        android:layout_marginTop="13dp"
+        android:layout_marginStart="160dp"
+        android:layout_marginTop="12dp"
         android:text="Select"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView4" />
